# tvxaml

./: Cargo.toml
examples/custom-view/: Cargo.toml
examples/custom-view/src/: floating_frame.rs  main.rs  ui.xaml
examples/editors/: Cargo.toml  log
examples/editors/src/: main.rs  ui.xaml
examples/options/: Cargo.toml
examples/options/src/: main.rs  ui.xaml
screen-base/: Cargo.toml  README.md
screen-base/src/: lib.rs
screen-ncurses/: Cargo.toml  README.md
screen-ncurses/src/: common.rs  lib.rs  ncurses.rs  non_unicode.rs  unicode.rs
src/: adorners_panel.rs  app.rs  arena.rs  background.rs  base.rs  border.rs  button.rs  canvas.rs  check_box.rs  content_control.rs  content_presenter.rs  control.rs  decorator.rs  dock_panel.rs  event_handler.rs  frame.rs  group_box.rs  headered_content_control.rs  headered_decorator.rs  input_line.rs  items_control.rs  lib.rs  obj_col.rs  padding.rs  panel.rs  pile_panel.rs  radio_button.rs  render_port.rs  stack_panel.rs  static_text.rs  template.rs  view.rs  view_vec.rs  xaml.rs
