[package]
name = "tvxaml"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "screen-base",
    "screen-ncurses",
]

[dependencies]
basic-oop = "0.6.0"
dynamic-cast = "0.1.6"
either = { version = "1.15.0", default-features = false }
int-vec-2d = { version = "0.1.5", features = ["serde"] }
iter-identify_first_last = "0.2.3"
itertools = { version = "0.14.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
tvxaml-screen-base = { version = "0.1.0", path = "screen-base" }
typetag = "0.2.20"
unicode-width = "0.2.0"
