[package]
name = "tvxaml"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "screen-base",
    "screen-ncurses",
]

[dependencies]
anycase = { version = "0.1.0", default-features = false, features = ["alloc"] }
basic-oop = "0.7.0"
dynamic-cast = "0.2.0"
either = { version = "1.15.0", default-features = false }
hashbrown = "0.15.3"
int-vec-2d = { version = "0.1.5", features = ["serde"] }
iter-identify_first_last = "0.2.3"
itertools = { version = "0.14.0", default-features = false }
no-std-xml = { git = "https://github.com/A1-Triard/no-std-xml.git", version = "0.8.20" }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
tvxaml-screen-base = { version = "0.1.0", path = "screen-base" }
typetag = "0.2.20"
unicode-width = "0.2.0"
